Naprawa problemów ze znakami specjalnymi

--- a/dyplomWFAMarcinPietrzak.tex
+++ b/dyplomWFAMarcinPietrzak.tex
@@ -505,7 +505,7 @@ Na podstawie powyższych klas zostały stworzone klasy BluePrintowe które możn
 \qquad
 \end{figure}  
 
-BP-PendulumSpawn jest aktorem który zostaje umieszczony na poziomie, trzeba tylko ustawić w nim informację o wahadle które chcemy stworzyć na poziomie oraz jaki widget chcemy umieścić by można za jego pomocą sterować wahadłami.
+BP\_PendulumSpawn jest aktorem który zostaje umieszczony na poziomie, trzeba tylko ustawić w nim informację o wahadle które chcemy stworzyć na poziomie oraz jaki widget chcemy umieścić by można za jego pomocą sterować wahadłami.
 
 \begin{figure}[H]%
 \centering
