Rozpoczęcie pisania o Grze w Życie

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -46,3 +46,11 @@
   year = { }, 
   note = "[]"
 }
+
+@online{game_of_life,
+  author = {IDC},
+  title = {{Gra w życie }},
+  howpublished = "\newline \url{https://www.sztucznainteligencja.org.pl/sztuczna-inteligencja-gra-w-zycie//}",
+  year = { }, 
+  note = "[]"
+}
