Dodano resztę informacji dotyczących Gry w życie

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -50,7 +50,15 @@
 @online{game_of_life,
   author = {IDC},
   title = {{Gra w życie }},
-  howpublished = "\newline \url{https://www.sztucznainteligencja.org.pl/sztuczna-inteligencja-gra-w-zycie//}",
+  howpublished = "\newline \url{https://www.sztucznainteligencja.org.pl/sztuczna-inteligencja-gra-w-zycie/}",
+  year = { }, 
+  note = "[]"
+}
+
+@online{game_of_life_wiki,
+  author = {IDC},
+  title = {{Gra w życie }},
+  howpublished = "\newline \url{https://en.wikipedia.org/wiki/Conway's_Game_of_Life/}",
   year = { }, 
   note = "[]"
 }
