Dodano informacje o Efekcie Motyla

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -62,3 +62,27 @@
   year = { }, 
   note = "[]"
 }
+
+@online{efekt_motyla,
+  author = {Jarosław Demkowski},
+  title = {{Efekt motyla i dziwne atraktory}},
+  howpublished = "\newline \url{https://web.archive.org/web/20160305054651/http://www-users.mat.umk.pl/~elodymek/Prezentacja.pdf/}",
+  year = { }, 
+  note = "[]"
+}
+
+@online{burze_motyle,
+  author = {Paul Halpern},
+  title = {{O motylach i burzach}},
+  howpublished = "\newline \url{https://web.archive.org/web/20100909161235/http://czytelnia.onet.pl/0,1161316,do_czytania.html/}",
+  year = { }, 
+  note = "[]"
+}
+
+@online{motyle_cpp,
+  author = {Maciej Matyka},
+  title = {{Jak narysować Motyle Lorenza }},
+  howpublished = "\newline \url{https://www.youtube.com/watch?v=XZ5QKKxHTXQ/}",
+  year = { }, 
+  note = "[]"
+}
